added appointment form and login html

--- a/public/make-appointments.html
+++ b/public/make-appointments.html
@@ -92,6 +92,6 @@
         <button type="button" class="back-button" onclick="goBack()">BACK</button>
     </section>
 
-    <script src="create-script.js"></script>
+    <script src="createAppt-script.js"></script>
   </body>
 </html>
