--- a/public/appointments.html
+++ b/public/appointments.html
@@ -57,6 +57,6 @@
       </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="appt-script.js"></script>
   </body>
 </html>
