--- a/public/html/create-medicine.html
+++ b/public/html/create-medicine.html
@@ -50,7 +50,7 @@
           </div>
 
           <div class="button-group">
-            <button type="button" class="btn-back">BACK</button>
+            <a href="../html/medicine.html" class="inter-regular btn-back">BACK</a>
             <button type="submit" class="btn-submit">DONE</button>
           </div>
         </form>
