added href routing

--- a/public/html/appointments.html
+++ b/public/html/appointments.html
@@ -12,9 +12,9 @@
   <body>
     <nav class="navbar inter-regular">
       <ul>
-        <li><a href="#">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="#">RECORDS</a></li>
-        <li><a href="#">MEDICATION</a></li>
+        <li><a href="medicine.html">MEDICATION</a></li>
         <li><a href="appointments.html">APPOINTMENTS</a></li>
       </ul>
     </nav>
