Edited navigation and added subfolder for appointment html

--- a/public/html/appointments/login-appointments.html
+++ b/public/html/appointments/login-appointments.html
@@ -6,15 +6,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=DynaPuff:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Marck+Script&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
     <title>Login page</title>
   </head>
   <body>
     <nav class="navbar inter-regular">
       <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">RECORDS</a></li>
-        <li><a href="#">MEDICATION</a></li>
+        <li><a href="../index.html">HOME</a></li>
+        <li><a href="../med-records/records.html">RECORDS</a></li>
+        <li><a href="../medicine/medicine.html">MEDICATION</a></li>
         <li><a href="appointments.html">APPOINTMENTS</a></li>
       </ul>
     </nav>
@@ -36,6 +36,6 @@
         <button type="button" class="back-button" onclick="goBack()">BACK</button>
     </section>
     
-    <script src="../javascript/loginAppt-script.js"></script>
+    <script src="../../javascript/loginAppt-script.js"></script>
   </body>
 </html>
