Edited navigation and added subfolder for records html

--- a/public/html/med-records/create-record.html
+++ b/public/html/med-records/create-record.html
@@ -14,8 +14,8 @@
       <ul>
         <li><a href="../index.html">HOME</a></li>
         <li><a href="records.html">RECORDS</a></li>
-        <li><a href="../medicine.html">MEDICATION</a></li>
-        <li><a href="../appointments.html">APPOINTMENTS</a></li>
+        <li><a href="../medicine/medicine.html">MEDICATION</a></li>
+        <li><a href="../appointments/appointments.html">APPOINTMENTS</a></li>
       </ul>
     </nav>
 
