--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,9 +13,9 @@
     <nav class="navbar inter-regular">
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="#">RECORDS</a></li>
-        <li><a href="medicine.html">MEDICATION</a></li>
-        <li><a href="appointments.html">APPOINTMENTS</a></li>
+        <li><a href="med-records/records.html">RECORDS</a></li>
+        <li><a href="medicine/medicine.html">MEDICATION</a></li>
+        <li><a href="appointments/appointments.html">APPOINTMENTS</a></li>
       </ul>
     </nav>
 
