--- a/public/html/medicine/medicine.html
+++ b/public/html/medicine/medicine.html
@@ -23,9 +23,16 @@
             <h1 class="inter-regular">No medication record</h1>
         </div>
         <div class="button-group">
-            <a href="create-medicine.html" class="inter-regular btn-add">ADD</a>
-            <a href="../index.html" class="inter-regular btn-back">BACK</a>
+            <button class="inter-regular btn-add">ADD</button>
         </div>
     </main>
+
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <!-- Your firebase.js (must initialize Firebase here) -->
+    <script src="../../javascript/firebase-browser.js"></script>
+    <!-- Medicine script -->
+    <script src="../../javascript/medicine-script.js"></script>
 </body>
 </html>
