Configured frontend for added medicine (TBC)

--- a/public/html/medicine/medicine.html
+++ b/public/html/medicine/medicine.html
@@ -22,8 +22,10 @@
         <div class="medication-empty-state">
             <h1 class="inter-regular">No medication record</h1>
         </div>
+        <div id="medicine-list" class="medication-list"></div>
         <div class="button-group">
             <button class="inter-regular btn-add">ADD</button>
+        </div>
         </div>
     </main>
 
@@ -34,5 +36,6 @@
     <script src="../../javascript/firebase-browser.js"></script>
     <!-- Medicine script -->
     <script src="../../javascript/medicine-script.js"></script>
+    <script src="../../javascript/getMedicine-script.js"></script>
 </body>
 </html>
