Added edit medical records frontend

--- a/public/html/med-records/edit-record.html
+++ b/public/html/med-records/edit-record.html
@@ -20,7 +20,7 @@
     </nav>
 
     <main class="record-container">
-      <h1 class="inter-regular">New Medical Record</h1>
+      <h1 class="inter-regular">Edit Medical Record</h1>
 
         <form id="record-form" class="record-form">
           <div class="form-group">
