--- a/public/html/med-records/records.html
+++ b/public/html/med-records/records.html
@@ -29,7 +29,7 @@
       </div> 
     </main>
     
-    <div class="default-button">
+    <div class="default-btn">
       <a href="create-record.html" class="inter-regular btn-add">Add New Record</a>
     </div>
 
