Configured frontend to link with backend

--- a/public/html/medicine/medicine.html
+++ b/public/html/medicine/medicine.html
@@ -20,7 +20,7 @@
 
     <main class="medication-container">
         <div class="medication-empty-state">
-            <h1 class="inter-regular">No medication record</h1>
+            <h1 class="inter-regular">Medicine records</h1>
         </div>
         <div id="medicine-list" class="medication-list"></div>
         <div class="button-group">
