--- a/public/html/medicine/medicine.html
+++ b/public/html/medicine/medicine.html
@@ -19,15 +19,26 @@
     </nav>
 
     <main class="medication-container">
-        <div class="medication-empty-state">
-            <h1 class="inter-regular">Medicine records</h1>
+        <h1 class="inter-regular">Medicine records</h1>
+        <div id="medicine-list" class="medication-list">
+          <!-- meds added by js -->
         </div>
-        <div id="medicine-list" class="medication-list"></div>
         <div class="button-group">
-            <button class="inter-regular btn-add">ADD</button>
-        </div>
+          <button class="inter-regular btn-add">ADD</button>
         </div>
     </main>
+
+    <div id="confirmation-modal" class="modal">
+      <div class="modal-content">
+        <h3 class="inter-regular" id="modal-message">Confirm removal?</h3>
+        <div class="modal-buttons">
+          <button id="modal-cancel" class="btn-cancel inter-regular">CANCEL</button>
+          <button id="modal-confirm" class="btn-confirm inter-regular">DELETE</button>
+        </div>
+      </div>
+    </div>
+
+    <div id="toast-container"></div>
 
     <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -35,7 +46,6 @@
     <!-- Your firebase.js (must initialize Firebase here) -->
     <script src="../../javascript/firebase-browser.js"></script>
     <!-- Medicine script -->
-    <script src="../../javascript/medicine-script.js"></script>
     <script src="../../javascript/getMedicine-script.js"></script>
 </body>
 </html>
