--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,23 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=DynaPuff:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Marck+Script&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
+    <!-- CSS path: Go up one level (from html/) to public/, then into css/ -->
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Home page</title>
+    <title>Home Page</title>
 </head>
 <body>
     <nav class="navbar inter-regular">
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="med-records/records.html">RECORDS</a></li>
-        <li><a href="medicine/medicine.html">MEDICATION</a></li>
-        <li><a href="appointments/appointments.html">APPOINTMENTS</a></li>
-      </ul>
+        <ul>
+            <!-- Navigation links are now relative to public/html/ -->
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="med-records/records.html">RECORDS</a></li>
+            <li><a href="medicine/medicine.html">MEDICATION</a></li>
+            <li><a href="appointments/appointments.html">APPOINTMENTS</a></li>
+        </ul>
     </nav>
 
+    <div class="main-content">
+        <header class="hero-section">
+            <div class="hero-text">
+                <h1>Lions Befrienders Service Association</h1>
+                <p>Your trusted platform for managing your healthcare with ease and peace of mind</p>
+            </div>
+            <div class="hero-image">
+                <img src="https://placehold.co/200x150/DEC0AE/000000?text=Healthcare" alt="Healthcare Image"> <!-- Placeholder image -->
+            </div>
+        </header>
 
+        <section class="reminders-section">
+            <div class="reminders-header">
+                <h2>My Health Reminders</h2>
+                <!-- Link to create-reminder page, relative to public/html/ -->
+                <button class="add-new-reminder-btn" onclick="location.href='reminders/create-reminder.html'">+ Add New Reminder</button>
+            </div>
+            <div id="remindersContainer" class="reminder-list">
+                <!-- Reminder items will be loaded here by JavaScript -->
+            </div>
+        </section>
+    </div>
+
+    <!-- Delete Confirmation Modal -->
+    <div id="deleteConfirmationModal" class="modal">
+        <div class="modal-content">
+            <p>Are you sure you want to remove this reminder?</p>
+            <div class="modal-buttons">
+                <button id="confirmDeleteBtn">Yes</button>
+                <button id="cancelDeleteBtn">No</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Toast Notification Element -->
+    <div id="toastNotification" class="toast"></div>
+
+    <!-- JavaScript path: Go up one level (from html/) to public/, then into javascript/ -->
+    <script src="../javascript/home.js"></script>
 </body>
+</html>
