--- a/public/html/med-records/edit-record.html
+++ b/public/html/med-records/edit-record.html
@@ -68,6 +68,59 @@
         <br />
 
         <div class="form-group">
+          <label class="inter-regular" for="systolic">Systolic Blood Pressure (mmHg)</label>
+          <input
+            type="number"
+            id="systolic"
+            name="systolic"
+            min="0"
+            max="300"
+            placeholder="e.g., 120"
+            class="inter-regular"
+          />
+        </div>
+
+        <div class="form-group">
+          <label class="inter-regular" for="diastolic">Diastolic Blood Pressure (mmHg)</label>
+          <input
+            type="number"
+            id="diastolic"
+            name="diastolic"
+            min="0"
+            max="200"
+            placeholder="e.g., 80"
+            class="inter-regular"
+          />
+        </div>
+
+        <div class="form-group">
+          <label class="inter-regular" for="bloodSugar">Blood Sugar (mg/dL)</label>
+          <input
+            type="number"
+            id="bloodSugar"
+            name="bloodSugar"
+            min="0"
+            max="600"
+            placeholder="e.g., 100"
+            class="inter-regular"
+          />
+        </div>
+
+        <div class="form-group">
+          <label class="inter-regular" for="weight">Weight (kg)</label>
+          <input
+            type="number"
+            id="weight"
+            name="weight"
+            min="0"
+            max="500"
+            step="0.1"
+            placeholder="e.g., 65.5"
+            class="inter-regular"
+          />
+        </div>
+
+        <div class="form-group">
           <label class="inter-regular" for="notes">Notes</label>
           <textarea
             id="notes"
