edit javascript for appointments

--- a/public/html/appointments/edit-appointment.html
+++ b/public/html/appointments/edit-appointment.html
@@ -24,7 +24,7 @@
             <h2 class="inter-regular">Welcome Back!</h2>
 
             <label for="contactnum">Contact Number:</label>
-            <input type="text" id="contactnum" name="contact" required>
+            <input type="text" id="contactNum" name="contact" required>
 
             <div class="row">
                 <div>
