--- a/public/html/appointments/manage-appointments.html
+++ b/public/html/appointments/manage-appointments.html
@@ -22,6 +22,9 @@
     <section id="dashboard">
       <h2 class="inter-regular">Appointments Dashboard</h2>
 
+      <div class="noApptMsg merriweather-sans-regular">
+        You have no active appointments.<br> Please click "Book new appointment" button to create one!
+      </div>
 
       <div class="appointment-footer merriweather-sans-regular">
         <a href="make-appointments.html" class="book-btn">Book new appointment</a>
