--- a/public/html/login.html
+++ b/public/html/login.html
@@ -12,23 +12,23 @@
   <body>
     <nav class="navbar inter-regular">
       <ul>
-        <li><a href="../index.html">HOME</a></li>
-        <li><a href="../med-records/records.html">RECORDS</a></li>
-        <li><a href="../medicine/medicine.html">MEDICATION</a></li>
-        <li><a href="appointments.html">APPOINTMENTS</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="med-records/records.html">RECORDS</a></li>
+        <li><a href="medicine/medicine.html">MEDICATION</a></li>
+        <li><a href="appointments/appointments.html">APPOINTMENTS</a></li>
       </ul>
     </nav>
 
     <section id="login-container">
-        <h2>Login</h2>
-        <form class="login-form">
+        <h2 class="inter-regular">Login</h2>
+        <form class="login-form lato-regular">
             <label for="accountName">Account Name</label>
             <input type="text" id="accountName" name="accountName" required />
 
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
 
-            <button type="submit">Login</button>
+            <button type="submit" class="blue-button">Login</button>
         </form>
     </section>
 
