--- a/public/html/index.html
+++ b/public/html/index.html
@@ -32,6 +32,10 @@
             </div>
         </header>
 
+        <div>
+            <a href="login.html">Login to account</a>
+        </div>
+
         <section class="reminders-section">
             <div class="reminders-header">
                 <h2>My Health Reminders</h2>
