--- a/public/html/login.html
+++ b/public/html/login.html
@@ -22,10 +22,10 @@
     <section id="login-container">
         <h2 class="inter-regular">Login</h2>
         <form class="login-form lato-regular">
-            <label for="fullName">Full Name</label>
-            <input type="text" id="fullName" name="fullName" required />
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email" autocomplete="on" required>
 
-            <label for="password">Password</label>
+            <label for="password">Password:</label>
             <input type="password" id="password" name="password" required />
 
             <div class="btn-row">
