set up login for user

--- a/public/html/create-account.html
+++ b/public/html/create-account.html
@@ -21,7 +21,7 @@
 
     <section id="login-container">
         <h2 class="inter-regular">Create Account</h2>
-        <form class="signUp-form lato-regular">
+        <form id="signUp-form" class="lato-regular">
             <label for="nric">NRIC / FIN:</label>
             <input type="text" id="nric" name="nric/fin" required/>
 
