--- a/public/html/login.html
+++ b/public/html/login.html
@@ -21,7 +21,7 @@
 
     <section id="login-container">
         <h2 class="inter-regular">Login</h2>
-        <form class="login-form lato-regular">
+        <form id ="login-form" class="lato-regular">
             <label for="email">Email Address:</label>
             <input type="email" id="email" name="email" autocomplete="on" required>
 
