--- a/public/html/appointments/manage-appointments.html
+++ b/public/html/appointments/manage-appointments.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="logout merriweather-sans-regular">
-        <button class="logout-btn">Logout</button>
+        <button class="back-button" onclick="goBack()">Back</button>
       </div>
   </section>
 
