add new route to get appt by id

--- a/public/html/appointments/edit-appointment.html
+++ b/public/html/appointments/edit-appointment.html
@@ -59,7 +59,7 @@
 
             <div class="edit-actions merriweather-sans-regular">
                 <button type="submit" class="change-btn">Save Changes</button>
-                <button class="cancel-btn" onclick="goBack()">Cancel</button>
+                <button type="button" class="cancel-btn" onclick="goBack()">Cancel</button>
             </div>
 
         </form>
