--- a/public/html/medicine/create-medicine.html
+++ b/public/html/medicine/create-medicine.html
@@ -20,7 +20,7 @@
     </nav>
 
     <main class="medication-container">
-        <h1 class="inter-regular">Enter Medication Details</h1>
+        <h1 class="inter-regular">Edit Medication Details</h1>
 
         <form id="medication-form" class="medication-form">
           <div class="form-group">
@@ -34,19 +34,19 @@
           </div>
 
           <div class="form-row">
-            <div class="form-group form-row">
-              <label class="inter-regular" for="per-Day">Times per day:</label>
+            <div class="form-group form-col">
+              <label class="inter-regular" for="times-per-day">Times per day:</label>
               <input type="number" id="times-per-day" name="perDay" min="1" required>
             </div>
-          </div>
 
-          <div class="form-group form-col">
-            <label class="inter-regular" for="food-timing">Before/After Food:</label>
-            <select id="food-timing" name="foodTiming" required>
-              <option value="">-- Select --</option>
-              <option value="before">Before Food</option>
-              <option value="after">After Food</option>
-            </select>
+            <div class="form-group form-col">
+              <label class="inter-regular" for="food-timing">Before/After Food:</label>
+              <select id="food-timing" name="foodTiming" required>
+                <option value="">-- Select --</option>
+                <option value="before">Before Food</option>
+                <option value="after">After Food</option>
+              </select>
+            </div>
           </div>
 
           <div class="button-group">
@@ -56,11 +56,6 @@
         </form>
     </main>
 
-    <!-- Firebase SDKs -->
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-    <!-- Your firebase.js (must initialize Firebase here) -->
-    <script src="../../javascript/firebase-browser.js"></script>
     <!-- Create medicine script -->
     <script src="../../javascript/createMedicine-script.js"></script>
 </body>
