--- a/public/html/index.html
+++ b/public/html/index.html
@@ -20,9 +20,9 @@
             <li><a href="appointments/appointments.html">APPOINTMENTS</a></li>
         </ul>
     </nav>
-
-    <div class="main-content">
-        <header class="hero-section">
+    
+    <div id="main-content">
+        <header class="hero-section merriweather-sans-regular">
             <div class="hero-text">
                 <h1>Lions Befrienders Service Association</h1>
                 <p>Your trusted platform for managing your healthcare with ease and peace of mind</p>
@@ -32,9 +32,7 @@
             </div>
         </header>
 
-        <div>
-            <a href="login.html">Login to account</a>
-        </div>
+        <div id="user-section"></div>
 
         <section class="reminders-section">
             <div class="reminders-header">
