--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -57,8 +57,9 @@
             </div>
         </div>
 
-        <div class="logout merriweather-sans-regular">
+        <div class="btn-actions merriweather-sans-regular">
             <button class="logout-btn" onclick="logoutUser()">Logout</button>
+            <button class="back-button" onclick="goBack()">Back</button>
         </div>
     </section>
 
