put user routes in diff controller and model

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -37,6 +37,6 @@
 
 
 
-    <script src="../javascript/login.js"></script>
+    <script src="../javascript/login-script.js"></script>
   </body>
 </html>
