--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -66,6 +66,6 @@
 
 
 
-    <script src="../javascript/profile.js"></script>
+    <script src="../javascript/profile-script.js"></script>
   </body>
 </html>
