fix folder structure pt 2

--- a/public/html/appointments/appointments.html
+++ b/public/html/appointments/appointments.html
@@ -70,6 +70,6 @@
       </div>
     </section>
 
-    <script src="../../javascript/appt-script.js"></script>
+    <script src="../../javascript/appt-js/appt-script.js"></script>
   </body>
 </html>
