Disabled "Add New Record" when user is not logged in

--- a/public/html/med-records/records.html
+++ b/public/html/med-records/records.html
@@ -29,7 +29,7 @@
       </div> 
     </main>
     
-    <div class="default-btn">
+    <div class="default-btn" id="add-record-btn-container">
       <a href="create-record.html" class="inter-regular btn-add">Add New Record</a>
     </div>
 
